# A-program-that-simultaneously-implements-face-detection-and-human-skeleton-extraction

./: README.md
乘客检测与跟踪/: CMakeLists.txt  face_detection_ex.cpp
乘客检测与跟踪+骨架提取/: face_detection_ex.cpp
基于骨架序列的异常行为检测与识别/: CMakeLists.txt  main.cpp
扶梯乘客人脸分类器训练/: CMakeLists.txt  fhog_object_detector_ex.cpp
骨架提取/: CMakeLists.txt  face_detection_ex.cpp
骨架模板制作/: main.cpp
